# toy-16-bit-vm

./: Cargo.toml
src/: lib.rs  machine.rs  memory_window.rs  ptr.rs
