[package]
name = "toy-16-bit-vm"
description = ""
version = "0.1.0"
authors = ["Perry Birch <perrysd@gmail.com>"]
keywords = []
edition = "2021"
repository = "https://github.com/perry-birch/toy-rust-vm"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
heapless = "0.7"
num_enum = "0.5"

[dev-dependencies]
js-sys = "0.3"

[dependencies.derive_more]
git = "https://github.com/JelteF/derive_more"
default-features = false
features = [
    "add_assign",
    "add",
    "as_mut",
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "from",
    "into",
    "mul_assign",
    "mul",
    "not",
    "sum",
    "unwrap"
]
